--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+         <div>
+            <a href="profile/dosen.html">
+                <img src="photo/huma.jpg">
+                <span class="caption">Olyvia Audy</span>
+            </a>
+        </div>
     </div>
+    
 </body>
 </html>
