--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
             </a>
         </div>
     </div>
+        <div>
+            <a href="profile/42430012.html">
+                <img src="42430012.png">
+                <span class="caption">Kadek Wahyu Santika Putra</span>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
