add photo and profile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
          <div>
             <a href="profile/dosen.html">
-                <img src="photo/huma.jpg">
+                <img src="photo/oliv.jpg">
                 <span class="caption">Olyvia Audy</span>
             </a>
         </div>
