--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Design</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
+
 <body>
     <header>
         <h1>Profile Kelas Pemrograman Web 2025</h1>
@@ -18,5 +20,14 @@
             </a>
         </div>
     </div>
+    <div class="container">
+        <div>
+            <a href="profile/42430001.html">
+                <img src="photo/risma.jpg">
+                <span class="caption">Ni Luh Risma Putri Wirdianthi</span>
+            </a>
+        </div>
+    </div>
 </body>
+
 </html>
