--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
         <div>
             <a href="profile/42430012.html">
-                <img src="42430012.png">
+                <img src="photo/42430012.png">
                 <span class="caption">Kadek Wahyu Santika Putra</span>
             </a>
         </div>
