--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+        <div>
+            <a href="profile/42430032_Benedito.html">
+                <img src="photo/Dio.png">
+                <span class="caption">Benedito Nidio Da Rosa Maia Tilman</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
