--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
-    </div>
+
         <div>
             <a href="profile/42430012.html">
-                <img src="photo/42430012.png">
+                <img src="photo/42430012.png" width="200">
                 <span class="caption">Kadek Wahyu Santika Putra</span>
             </a>
         </div>
