Menambahkan profil saya (42430033)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+        <div>
+            <a href="profile/42430033Lukman.html">
+                <img src="photo/42430033Lukman.jpg"
+                <span class="caption">Moh. Lukman Hakim Fhadillah</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
