--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <div>
             <a href="profile/dosen.html">
-                <img src="photo/huma.jpg">
-                <span class="caption">Gede Humaswara Prathama</span>
+                <img src="photo/profil.jpg">
+                <span class="caption">Gede Sathya Pratama Deva</span>
             </a>
         </div>
     </div>
