Membuat Profile (Nada)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
-    </div>
+        <div>
+            <a href="profile/42430011.html">
+                <img src="photo/Nada.jpg">
+                <span class="caption">I Gede Nada Arsana</span>
+            </a>
+        </div>
+    </div>    
 </body>
 </html>
