Membuat Profile (Cevyn)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div>
+            <a href="profile/42430055.html">
+                <img src="photo/cevyn.JPG">
+                <span class="caption">Cevyn Eduard Imanuel Dapa Talu</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
