edit nama profile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
          <div>
-            <a href="profile/dosen.html">
+            <a href="profile/42430058.html">
                 <img src="photo/oliv.jpg">
                 <span class="caption">Olyvia Audy</span>
             </a>
