--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div>
+            <a href="profile/42430025.html">
+                <img src="photo/WhatsApp Image 2025-09-19 at 14.34.27_3f35d930.jpg">
+                <span class="caption">Rosan</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
