--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+        <div>
+            <a href="mahayani/42430028.html">
+                <img src="potoprofil42430028.jpg">
+                <span class="caption">Ni Komang Dewi Mahayani</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
