--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <div class="container">
         <div>
-            <a href="profile/dosen.html">
-                <img src="photo/huma.jpg">
-                <span class="caption">Gede Humaswara Prathama</span>
+            <a href="Yunima/42430030.html">
+                <img src="nima.jpg">
+                <span class="caption">Yunima Dioranda Manik</span>
             </a>
         </div>
     </div>
