--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <div class="container">
         <div>
             <a href="profile/dosen.html">
+                <img src="photo/huma.jpg">
+                <span class="caption">Gede Humaswara Prathama<span>
+            </a>
+        </div>
+
+        <div>
+            <a href="profile/dosen.html">
                 <img src="photo/profil.jpg">
-                <span class="caption">Gede Sathya Pratama Deva</span>
+                <span class="caption">Gede Sathya Pratama Deva<span>
             </a>
         </div>
     </div>
