--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div>
+            <a href="profile/42430019.html">
+                <img src="photo/evan.jpg">
+                <span class="caption">Evan Safi Maulana Malik Ibrahim</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
