--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+        <div>
+            <a href="profile/42430007.html">
+                <img src="photo/GBRL.jpeg">
+                <span class="caption">Gabriel Jehuda Tamedo</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
