Menambahkan profile Luna

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
           <span class="caption">I Made Dedy Wanditya</span>
         </a>
       </div>
+
+      <div>
+        <a href="profile/42430045_Luna.html">
+          <img src="photo/42430045.jpg" />
+          <span class="caption">Meizaluna Aurelia Frakasa</span>
+        </a>
+      </div>
     </div>
   </body>
 </html>
