--- a/index.html
+++ b/index.html
@@ -20,3 +20,10 @@
     </div>
 </body>
 </html>
+         <div>
+            <a href="indri/42430010.html">
+                <img src="photo/indri.jpg">
+                <span class="caption">indriani asten</span>
+            </a>
+        </div>
+    </div>
