--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+         <div>
+            <a href="profile/42430017.html">
+                <img src="photo/42430017.jpg">
+                <span class="caption">Daniel Ndolu</span>
+            </a>
     </div>
 </body>
 </html>
