--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <div>
-        <a href="profile/dosen.html">
+        <a href="profile/42430029.html">
           <img src="photo/zaky jpg.jpg" />
           <span class="caption">Renald Kevin Azzaky</span>
         </a>
