--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div>
+            <a href="/profile/42430040.html">
+                <img src="photo/salsa.jpg">
+                <span class="caption">Salsabila Nur Shafa</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
