--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div>
+            <a href="profile/Mahasiswa.html">
+                <img src="photo/Yosua.jpg">
+                <span class="caption">Yosua Theo Fraktus Michael Jagga Wali(42430006)</span>
+            </a>
+        </div>
     </div>
+        
 </body>
 </html>
