--- a/profile/42430012.html
+++ b/profile/42430012.html
@@ -29,7 +29,7 @@
     <!--Gambar Profile Mahasiswa-->
     <main>
         <h1>Profil Mahasiswa</h1>
-        <img src="profile.png" alt="Foto Profile Mahasiswa" width="200">
+        <img src="../photo/42430012.png" alt="Foto Profile Mahasiswa" width="200">
 
         <!--Deskripsi-->
         <p>Halo saya Kadek Wahyu Santika Putra, seorang mahasiswa yang berasal dari jurusan Teknologi Informasi Universitas Pendidikan Nasional.
