--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Design</title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Profile Kelas Pemrograman Web 2025</h1>
+      <h1>Profile Kelas Pemrograman Web 2025</h1>
     </header>
     <div class="container">
+      <div>
+        <a href="profile/dosen.html">
+          <img src="photo/huma.jpg" />
+          <span class="caption">Gede Humaswara Prathama</span>
+        </a>
+      </div>
+
+      <div>
+        <a href="profile/dosen.html">
+          <img src="photo/huma.jpg" />
+          <span class="caption">Olyvia Audy</span>
+        </a>
+      </div>
+
         <div>
             <a href="profile/dosen.html">
-                <img src="photo/huma.jpg">
-                <span class="caption">Gede Humaswara Prathama</span>
+            <img src="photo/huma.jpg" />
+            <span class="caption">I Made Dedy Wanditya</span>
             </a>
         </div>
         <div>
@@ -24,5 +38,5 @@
             </a>
         </div>
     </div>
-</body>
+  </body>
 </html>
