--- a/profile/42430001.html
+++ b/profile/42430001.html
@@ -3,67 +3,128 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata Mahasiswa</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dosen Profile</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: #f6f8fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        .profile-container {
+            max-width: 600px;
+            margin: 40px auto;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            padding: 32px;
+        }
+
+        .profile-header {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+            margin-bottom: 24px;
+        }
+
+        .profile-avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #e1e4e8;
+            background: #eaeaea;
+        }
+
+        .profile-info h2 {
+            margin: 0 0 8px 0;
+            font-size: 2rem;
+            color: #222;
+        }
+
+        .profile-info p {
+            margin: 0;
+            color: #555;
+            font-size: 1.1rem;
+        }
+
+        .profile-details {
+            margin-top: 24px;
+        }
+
+        .profile-details h3 {
+            margin-bottom: 12px;
+            color: #333;
+            font-size: 1.2rem;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 6px;
+        }
+
+        .profile-details ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .profile-details li {
+            margin-bottom: 10px;
+            color: #444;
+            font-size: 1rem;
+        }
+
+        @media (max-width: 700px) {
+            .profile-container {
+                padding: 16px;
+            }
+
+            .profile-header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+            }
+
+            .profile-avatar {
+                width: 90px;
+                height: 90px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Informasi Biodata -->
-    <h1>Halo, saya Ni Luh Risma Putri Wirdianthi!</h1>
-    <p>Saya seorang mahasiswa semester tiga yang tertarik dengan dunia teknologi, desain, dan kreativitas digital. Bagi
-        saya, membangun sesuatu bukan hanya soal hasil akhir, tapi juga perjalanan untuk terus belajar dan berkembang.
-        Saya percaya setiap ide bisa diwujudkan menjadi sesuatu yang bermanfaat, dan setiap hari adalah kesempatan baru
-        untuk tumbuh.</p>
-    <img src="images/gambar-profil.jpg" alt="Gambar Profil">
-
-    <!-- Media Sosial dan Pendidikan -->
-    <h2>Media Sosial</h2>
-    <h3>Let's Connect!</h3>
-    <p>Kunjungi: <a href="https://www.instagram.com/sch.idn?igsh=dmN4cjBrY2ZuYXNs" target="_blank">Instagram saya</a>
-        dan <a href="https://www.linkedin.com/in/risma-putri-wirdianthi/" target="_blank">LinkedIn saya</a>.</p>
-
-    <h2>Pendidikan</h2>
-    <table border="2">
-        <tr>
-            <th>Jenjang</th>
-            <th>Nama Institusi</th>
-            <th>Tahun</th>
-        </tr>
-        <tr>
-            <td>SD</td>
-            <td>SD Kartika VII-3 Denpasar</td>
-            <td>2012 - 2018</td>
-        </tr>
-        <tr>
-            <td>SMP</td>
-            <td>SMP Negeri 6 Denpasar</td>
-            <td>2018 - 2021</td>
-        </tr>
-        <tr>
-            <td>SMA</td>
-            <td>SMA Negeri 2 Denpasar</td>
-            <td>2021 - 2024</td>
-        </tr>
-        <tr>
-            <td>S1</td>
-            <td>Universitas Pendidikan Nasional</td>
-            <td>2024 - Sekarang</td>
-        </tr>
-    </table>
-
-    <!-- Formulir Kontak -->
-    <h2>Hubungi Saya!</h2>
-    <h3>Halo! Mau cerita, diskusi, atau sekadar kasih saran? Tinggal tulis pesanmu di form ini ya.</h3>
-    <form action="submit_form.php" method="post">
-        <label for="name">Nama:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
-
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <input type="submit" value="Kirim">
-    </form>
+    <div class="profile-container">
+        <div class="profile-header">
+            <img src="../photo/huma.jpg" alt="Profile Photo" class="profile-avatar">
+            <div class="profile-info">
+                <h2>Ni Luh Risma Putri Wirdianthi</h2>
+                <p>Student of Technology Informasi</p>
+                <p>Email: wirdianthi05@gmail.com</p>
+            </div>
+        </div>
+        <div class="profile-details">
+            <h3>About</h3>
+            <p>Risma specializes in Software Engineering and Cloud Computing. She has published over 50 research papers
+                and is passionate about teaching and mentoring students.</p>
+            <h3>Education</h3>
+            <ul>
+                <li>SMA Negeri 2 Denpasar</li>
+                <li>Universitas Pendidikan Nasional</li>
+            </ul>
+            <h3>Research Interests</h3>
+            <ul>
+                <li>Data Science</li>
+                <li>Cloud Computing</li>
+                <li>Artificial Engineering</li>
+            </ul>
+            <h3>Selected Publications</h3>
+            <ul>
+                <li>Risma, P. (2025). Learn: Deep Learning Pt 2.</li>
+                <li>Risma, P. (2025). Learn: UI/UX Design</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
