update: foto-risma

--- a/profile/42430001.html
+++ b/profile/42430001.html
@@ -96,7 +96,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="../photo/huma.jpg" alt="Profile Photo" class="profile-avatar">
+            <img src="/photo/risma.jpg" alt="Profile Photo" class="profile-avatar">
             <div class="profile-info">
                 <h2>Ni Luh Risma Putri Wirdianthi</h2>
                 <p>Student of Technology Informasi</p>
