--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+
+        <div>
+            <a href="profile/42430034.html">
+                <img src="photo/42430034.jpg">
+                <span class="caption">Zecharian Zerach Putra Bahagia</span>
+            </a>
+        </div>
     </div>
+
 </body>
 </html>
