--- a/profile/42430040.html
+++ b/profile/42430040.html
@@ -1,58 +1,114 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata Pribadi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dosen Profile</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: #f6f8fa;
+            margin: 0;
+            padding: 0;
+        }
+        .profile-container {
+            max-width: 600px;
+            margin: 40px auto;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            padding: 32px;
+        }
+        .profile-header {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+            margin-bottom: 24px;
+        }
+        .profile-avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #e1e4e8;
+            background: #eaeaea;
+        }
+        .profile-info h2 {
+            margin: 0 0 8px 0;
+            font-size: 2rem;
+            color: #222;
+        }
+        .profile-info p {
+            margin: 0;
+            color: #555;
+            font-size: 1.1rem;
+        }
+        .profile-details {
+            margin-top: 24px;
+        }
+        .profile-details h3 {
+            margin-bottom: 12px;
+            color: #333;
+            font-size: 1.2rem;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 6px;
+        }
+        .profile-details ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .profile-details li {
+            margin-bottom: 10px;
+            color: #444;
+            font-size: 1rem;
+        }
+        @media (max-width: 700px) {
+            .profile-container {
+                padding: 16px;
+            }
+            .profile-header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+            }
+            .profile-avatar {
+                width: 90px;
+                height: 90px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Informasi Biodata</h1>
-    <h2>Data Diri</h2>
-    <p>Hallo perkenalkan nama saya salsabila nur shafa biasa di panggil salsa, saya sedang menempuh pendidikan semester tiga di Universitas Pendidikan Nasional 
-        fakultas Teknologi dan informatika prodi teknologi informasi .</p>
-    <h2>Foto Profile</h2>
-    <p>Berikut ini adalah foto profile saya: </p>
-    <img src="Foto Profile.png" alt="Foto Profile Saya">
-
-    <h2>Media Sosial</h2>
-    <p>Untuk informasi lebih lanjut mengenai saya, berikut media sosial saya: <a href="http://www.instagram.com" target="_blank">Media Sosial saya</a>.</p>
-
-    <h2>Pendidikan</h2>
-    <table border="1">
-        <tr>
-            <th>jenjang</th>
-            <th>Nama Sekolah</th>
-            <th>Tahun Masuk/Lulus</th>
-        </tr>
-        <tr>
-            <td>SD</td>
-            <td>MI Hidayatullah</td>
-            <td>2012 - 2018</td>
-        </tr>
-        <tr>
-            <td>SMP</td>
-            <td>MTS Hidayatullah</td>
-            <td>2018 - 2021</td>
-        </tr>
-        <tr>
-            <td>SMA</td>
-            <td>MA Hidayatullah</td>
-            <td>2021 - 2024</td>
-        </tr>
-    </table>
-
-    <h2>Formulir Kontak</h2>
-    <form action="submit_form.php" method="post">
-        <label for="name">Nama Lengkap:</label>
-        <input type="text" id="name" name="fullname" required><br><br>
-
-        <label for="email">Email</label>
-        <input type="email" id="email" name="emailaddr" required><br><br>
-
-        <button type="submit">Submit</button>
-    </form>
+    <div class="profile-container">
+        <div class="profile-header">
+            <img src="../photo/salsa.jpg" alt="Profile Photo" class="profile-avatar">
+            <div class="profile-info">
+                <h2>Salsabila Nur Shafa</h2>
+                <p>Student of Technology Informasi</p>
+                <p>Email: salsabilanurshafa@gmail.com</p>
+            </div>
+        </div>
+        <div class="profile-details">
+            <h3>About</h3>
+            <p>Salsa specializes in Software Engineering and Cloud Computing. She has published over 50 research papers and is passionate about teaching and mentoring students.</p>
+            <h3>Education</h3>
+            <ul>
+                <li>SMP Negeri 1 Denpasar</li>
+                <li>SMA Negeri 1 Denpasar</li>
+            </ul>
+            <h3>Research Interests</h3>
+            <ul>
+                <li>Software Engineering</li>
+                <li>Cloud Computing</li>
+                <li>Artificial Engineering</li>
+            </ul>
+            <h3>Selected Publications</h3>
+            <ul>
+                <li>Salsa, N. (2023). Learn: Deep Learning</li>
+                <li>Salsa, N. (2022). Learn: UI/UX Design</li>
+            </ul>
+        </div>
+    </div>
 </body>
-
 </html>
