--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
           <span class="caption">Gede Humaswara Prathama</span>
         </a>
       </div>
+      <div>
+        <a href="profile/dosen.html">
+          <img src="photo/OBI.jpg" />
+          <span class="caption">I Made Obi Pranata</span>
+        </a>
+      </div>
 
       <div>
         <a href="profile/dosen.html">
