fix: kesalahan tag, kesalahan path photo dan profile

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         </div>
 
         <div>
-            <a href="Yunima/42430030.html">
-                <img src="nima.jpg">
+            <a href="profile/42430030.html">
+                <img src="photo/nima.jpg">
                 <span class="caption">Yunima Dioranda Manik</span>
           </a>
       </div>
       <div>
-            <a href="mahayani/42430028.html">
-                <img src="potoprofil42430028.jpg">
+            <a href="profile/42430028.html">
+                <img src="photo/fotoprofil42430028.jpg">
                 <span class="caption">Ni Komang Dewi Mahayani</span>
             </a>
         </div>
@@ -99,20 +99,12 @@
                 <span class="caption">I Gede Nada Arsana</span>
             </a>
         </div>
-    </div>    
         <div>
             <a href="profile/42430034.html">
                 <img src="photo/42430034.jpg">
                 <span class="caption">Zecharian Zerach Putra Bahagia</span>
             </a>
         </div>
-        <div>
-            <a href="profile/dosen.html">
-                <img src="photo/huma.jpg">
-                <span class="caption">Gede Humaswara Prathama<span>
-            </a>
-        </div>
-
          <div>
             <a href="profile/42430058.html">
                 <img src="photo/oliv.jpg">
@@ -123,10 +115,11 @@
             <a href="profile/dosen.html">
                 <img src="photo/profil.jpg">
                 <span class="caption">Gede Sathya Pratama Deva<span>
-                  </a>
+            </a>
         </div>
+        <div>
             <a href="profile/42430033Lukman.html">
-                <img src="photo/42430033Lukman.jpg"
+                <img src="photo/42430033Lukman.jpg">
                 <span class="caption">Moh. Lukman Hakim Fhadillah</span>
             </a>
         </div>
@@ -143,6 +136,7 @@
                 <span class="caption">Kadek Wahyu Santika Putra</span>
             </a>
         </div>
+        <div>
             <a href="profile/42430032_Benedito.html">
                 <img src="photo/Dio.png">
                 <span class="caption">Benedito Nidio Da Rosa Maia Tilman</span>
@@ -155,7 +149,7 @@
             </a>
         </div>
                        <div>
-            <a href="indri/42430010.html">
+            <a href="profile/42430010.html">
                 <img src="photo/indri.jpg">
                 <span class="caption">indriani asten</span>
             </a>
@@ -165,8 +159,7 @@
                 <img src="photo/42430017.jpg">
                 <span class="caption">Daniel Ndolu</span>
             </a>
-    </div>
-    </div>
-          
+        </div>
+    </div> 
 </body>
 </html>
