menambahkan foto dika

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                 <span class="caption">Gede Humaswara Prathama</span>
             </a>
         </div>
+        <div class="container">
+            <div>
+                <a href="profile/dosen.html">
+                    <img src="photo/dika.jpg" />
+                    <span class="caption">Gede Andika Ardana</span>
+                </a>
+            </div>
+    </body>
 </body>
 
 </html>
